--- a/style.css
+++ b/style.css
@@ -67,8 +67,8 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background-color: rgba(214, 209, 209, 0.5);
     z-index: 2;
   }
@@ -281,7 +281,35 @@
     padding: 0 4px 0 4px;
   }
 
+  @media(max-width:640px)
+  {
+    .container{
+      width: 100vw;
+    }
+    .pop-up-message {
+      left: 50%;
+      top: 50%;
+    }
+    
+  }
+
   @media(max-width:500px)
   {
-    
+    .pop-up-message {
+      width: 70vw;
+      min-height: 40vw;
+      position: absolute;
+      border-radius: 15px;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 3;
+      box-shadow: rgba(237, 237, 255, 0.25) 0px 50px 100px -20px,
+        rgba(242, 128, 128, 0.3) 0px 30px 60px -30px;
+      padding: 15px;
+      display: flex;
+      flex-direction: column;
+      background-color: #fff;
+    }
+
   }
